# weatherbot

./: .gitignore  Cargo.toml  run and register.bat  run.bat  schema.db
data/: db.db
migrations/: 1_init.sql
src/: accuweather.rs  current.rs  daily_forecast.rs  database.rs  discord_event_handler.rs  distance.rs  error.rs  geocoding.rs  hourly_forecast.rs  hourly_soil_forecast.rs  location.rs  main.rs  reply_shortcuts.rs  sunrise_sunset.rs  user_locations.rs  util.rs  uv.rs
src/forecasts/: daily.rs  hourly.rs  hourly_absolute_humidity.rs  hourly_soil.rs  mod.rs
